--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "ertugrul.esol@gmail.com",
+    "Issuer": "ertugrul.esol@gmail.com",
+    "AccessTokenExpiration": 10, //Token'ýn geçerlilik süresi
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
